log/build_2026-03-06_15-06-22/mtc/stderr.log
/home/hyeonsu/xarm_ws/src/mtc/src/mtc_node.cpp: In member function ‘void MTCTaskNode::run()’:
/home/hyeonsu/xarm_ws/src/mtc/src/mtc_node.cpp:101:40: error: invalid initialization of reference of type ‘const std::chrono::nanoseconds&’ {aka ‘const std::chrono::duration<long int, std::ratio<1, 1000000000> >&’} from expression of type ‘std::chrono::duration<double>’
  101 |         rclcpp::sleep_for(std::chrono::duration<double>(hold_sec));
      |                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/jazzy/include/rclcpp/rclcpp/logging.hpp:25,
                 from /opt/ros/jazzy/include/moveit_core/moveit/kinematics_base/kinematics_base.hpp:42,
                 from /opt/ros/jazzy/include/moveit_core/moveit/robot_model/joint_model_group.hpp:42,
                 from /opt/ros/jazzy/include/moveit_core/moveit/robot_model/robot_model.hpp:45,
                 from /opt/ros/jazzy/include/moveit_core/moveit/robot_state/robot_state.hpp:40,
                 from /opt/ros/jazzy/include/moveit_ros_planning_interface/moveit/planning_scene_interface/planning_scene_interface.hpp:40,
                 from /home/hyeonsu/xarm_ws/src/mtc/src/mtc_node.cpp:11:
/opt/ros/jazzy/include/rclcpp/rclcpp/utilities.hpp:233:36: note: in passing argument 1 of ‘bool rclcpp::sleep_for(const std::chrono::nanoseconds&, Context::SharedPtr)’
  233 |   const std::chrono::nanoseconds & nanoseconds,
      |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
/home/hyeonsu/xarm_ws/src/mtc/src/mtc_node.cpp:116:38: error: invalid initialization of reference of type ‘const std::chrono::nanoseconds&’ {aka ‘const std::chrono::duration<long int, std::ratio<1, 1000000000> >&’} from expression of type ‘std::chrono::duration<double>’
  116 |       rclcpp::sleep_for(std::chrono::duration<double>(hold_sec));
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/jazzy/include/rclcpp/rclcpp/utilities.hpp:233:36: note: in passing argument 1 of ‘bool rclcpp::sleep_for(const std::chrono::nanoseconds&, Context::SharedPtr)’
  233 |   const std::chrono::nanoseconds & nanoseconds,
      |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
gmake[2]: *** [CMakeFiles/mtc_node.dir/build.make:76: CMakeFiles/mtc_node.dir/src/mtc_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/mtc_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
